changes guess to use remove instead of removeFirst for java 17 compatibility