@@ -138,7 +138,7 @@ public class Utils {
                 checkedCount += 1;
             }
 
-            guessQueue.removeFirst();
+            guessQueue.remove(0);
             if (board[rowPosition][columnPosition].getValue() == '0') {
                 for (int i = -1; i <= 1; i++) {
                     for (int j = -1; j <= 1; j++) {
